--- a/src/Styles/ScoreTable.css
+++ b/src/Styles/ScoreTable.css
@@ -41,6 +41,7 @@ table tr {
 .days td {
   width: 7vw;
   min-width: 7vw;
+  font-weight: bold;
 }
 
 .scores div td {
@@ -115,6 +116,10 @@ h4 {
   margin-right: 3vw;
 }
 
+h3 {
+  margin: 3vw;
+}
+
 
 /* For larger than phone screen size (Desktops or iPads) */
 @media only screen and (min-width: 601px) {
@@ -170,7 +175,8 @@ h4 {
 
   .tableContainer {
     width: calc(100% - 40px);
-    margin-left: 5px;
-    margin-right: 5px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin: auto;
   }
 }
