--- a/src/Styles/EnterScore.css
+++ b/src/Styles/EnterScore.css
@@ -47,6 +47,7 @@
     .enterScoreContainer h3 {
         padding: 30px 20px 20px 20px;
         font-size: 30px;
+        margin: 0px;
     }
 
     .enterScoreContainer p {
@@ -65,6 +66,10 @@
         padding: 10px 20px;
         overflow: hidden;
         width: 960px;
+    }
+
+    .scoreForm div select:hover {
+        cursor: pointer;
     }
 
     .scoreForm div button {
