--- a/src/Styles/About.css
+++ b/src/Styles/About.css
@@ -19,8 +19,12 @@
         margin-bottom: 50px;
     }
 
+    .aboutUsContainer {
+        margin-top: 110px;
+    }
+
     .aboutUsContainer h3 {
-        margin-top: 30px;
+        margin: 30px 0px 0px 0px;
         font-size: 40px;
         padding-bottom: 15px;
     }
