--- a/src/Styles/CreateGame.css
+++ b/src/Styles/CreateGame.css
@@ -82,3 +82,63 @@
     background-color: #787c7fff;
     color: white;
 }
+
+/* For larger than phone screen size (Desktops or iPads) */
+@media only screen and (min-width: 601px) {
+    .createGameContainerContainer {
+        margin-top: 110px;
+        display: flex;
+        justify-content: center;
+    }
+
+    .createGameContainerContainer div {
+        max-width: 1000px;
+    }
+
+    .createGameContainerContainer div h3 {
+        margin: 30px 0px 30px 0px;
+    }
+
+    .createGameContainer {
+        width: 800px;
+        margin-left: 0;
+        margin-right: 0;
+        padding: 30px;
+    }
+
+    .labelCreateGame {
+        font-size: 30px;
+    }
+
+    .createGameForm div input {
+        font-size: 30px;
+        padding: 10px;
+        margin-bottom: 30px;
+    }
+
+    .brokenButContainer button {
+        font-size: 30px;
+        padding: 10px 20px;
+    }
+
+    .brokenButContainer button:hover {
+        cursor: pointer;
+        background-color: #69a964;
+    }
+
+    .errorContainerInGame {
+        margin-top: 30px;
+        width: 100%;
+        padding: 10px;
+        font-size: 30px;
+    }
+
+    .closeDiv img {
+        width: 30px;
+    }
+
+    .closeDiv:hover {
+        transform: scale(1.1);
+        cursor: pointer;
+    }
+}
