--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -78,6 +78,7 @@ button {
     .homeContainerContainer {
         display: flex;
         justify-content: center;
+        margin-top: 110px;
     }
 
     .homeContainer {
