--- a/src/Styles/MyGames.css
+++ b/src/Styles/MyGames.css
@@ -108,7 +108,6 @@ p a {
 /* For larger than phone screen size (Desktops or iPads) */
 @media only screen and (min-width: 601px) {
     .outerContainer:hover {
-        background-color: rgb(245, 245, 245);
         transform: scale(1.01);
     }
 
@@ -120,6 +119,7 @@ p a {
         margin-bottom: 80px;
         display: flex;
         justify-content: center;
+        margin-top: 110px;
     }
 
     .myGamesContainer img {
