--- a/src/Styles/About.css
+++ b/src/Styles/About.css
@@ -1,6 +1,6 @@
 .aboutmep {
     font-size: 3.5vw;
-    margin-bottom: 10vw;
+    margin: 0vw 3vw 10vw 3vw;
 }
 
 .aboutUsContainer {
@@ -16,11 +16,12 @@
 @media only screen and (min-width: 601px) {
     .aboutmep {
         font-size: 25px;
-        margin-bottom: 50px;
+        margin: 0px 0px 50px 0px;
     }
 
     .aboutUsContainer {
         margin-top: 110px;
+        margin-bottom: 80px;
     }
 
     .aboutUsContainer h3 {
