--- a/src/Styles/CreateGame.css
+++ b/src/Styles/CreateGame.css
@@ -32,8 +32,8 @@
 }
 
 .errorContainerInGame {
-    margin-top: 3vw;
-    width: 88vw;
+    margin-bottom: 3vw;
+    width: calc(88vw-4px);
     background-color: lightcoral;
     padding: 1vw 1vw;
     font-size: 4.5vw;
@@ -92,11 +92,12 @@
     }
 
     .createGameContainerContainer div {
-        max-width: 1000px;
+        max-width: 800px;
     }
 
     .createGameContainerContainer div h3 {
         margin: 30px 0px 30px 0px;
+        font-size: 25px;
     }
 
     .createGameContainer {
@@ -107,17 +108,17 @@
     }
 
     .labelCreateGame {
-        font-size: 30px;
+        font-size: 25px;
     }
 
     .createGameForm div input {
-        font-size: 30px;
+        font-size: 25px;
         padding: 10px;
         margin-bottom: 30px;
     }
 
     .brokenButContainer button {
-        font-size: 30px;
+        font-size: 25px;
         padding: 10px 20px;
     }
 
@@ -127,7 +128,7 @@
     }
 
     .errorContainerInGame {
-        margin-top: 30px;
+        margin-bottom: 30px;
         width: 100%;
         padding: 10px;
         font-size: 30px;
