--- a/src/Styles/JoinGame.css
+++ b/src/Styles/JoinGame.css
@@ -80,6 +80,7 @@
         margin-top: 110px;
         display: flex;
         justify-content: center;
+        margin-bottom: 80px;
     }
 
     .joinGaimeContainer {
