--- a/src/Styles/ManageLobby.css
+++ b/src/Styles/ManageLobby.css
@@ -2,6 +2,10 @@
     margin-bottom: 10vw;
 }
 
+.manageLobbyContainerContainer h3 {
+    font-size: 4.5vw;
+}
+
 .manageLobbyContainer {
     width: 94vw;
     margin-left: 3vw;
@@ -30,7 +34,7 @@
 }
 
 .rightContent {
-    margin-right: 5vw;
+    margin-right: 3vw;
 }
 
 .rightContent button {
@@ -102,14 +106,14 @@
 }
 
 .leftContent {
-    margin: 3vw 2vw 3vw 5vw;
+    margin: 3vw 2vw 3vw 3vw;
 }
 
 /* For larger than phone screen size (Desktops or iPads) */
 @media only screen and (min-width: 601px) {
 
     .manageLobbyContainerContainer h3 {
-        font-size: 30px;
+        font-size: 25px;
         margin: 30px 0px 30px 0px;
     }
 
@@ -120,19 +124,19 @@
     }
 
     .manageLobbyContainerContainer {
-        width: 1000px;
-        max-width: 1000px;
+        width: 800px;
+        max-width: 800px;
         margin-bottom: 50px;
     }
 
     .areYouSure p {
         width: 440px;
-        font-size: 30px;
+        font-size: 20px;
         margin: 30px;
     }
 
     .areYouSure button {
-        font-size: 25px;
+        font-size: 20px;
         padding: 10px 20px;
     }
 
@@ -141,7 +145,7 @@
     }
 
     .areYouSure div {
-        width: 500px;
+        width: 400px;
         display: flex;
         justify-content: flex-end;
     }
@@ -165,7 +169,7 @@
     }
 
     .infoContainer p {
-        font-size: 30px;
+        font-size: 25px;
     }
 
     .infoContainer:first-child {
@@ -177,11 +181,11 @@
     }
 
     .rightContent {
-        margin-right: 50px;
+        margin-right: 30px;
     }
 
     .rightContent button {
-        font-size: 30px;
+        font-size: 25px;
         padding: 10px 20px;
     }
 
@@ -191,13 +195,13 @@
     }
 
     .manageLobbyContainer {
-        width: 1000px;
+        width: 800px;
         margin-left: 0px;
         margin-bottom: 30px;
     }
 
     .flexLobbyContainer {
-        width: 1000px;
+        width: 800px;
     }
 
     .leftContent {
@@ -208,16 +212,16 @@
     }
 
     .successContainerJoinDelete {
-        width: 100%;
+        width: 800px;
         padding: 15px;
-        font-size: 30px;
-        margin: 0px 0px 30px 0px;
+        font-size: 25px;
+        margin: 0px 0px 20px 0px;
     }
 
     .errorContainerDelete {
         width: 100%;
         padding: 15px;
-        font-size: 30px;
-        margin: 0px 0px 30px 0px;
+        font-size: 25px;
+        margin: 0px 0px 20px 0px;
     }
 }
