--- a/src/Styles/MyGames.css
+++ b/src/Styles/MyGames.css
@@ -2,6 +2,10 @@
     margin-bottom: 10vw;
 }
 
+.myGamesContainerContainer div h3 {
+    font-size: 4.5vw;
+}
+
 .outerContainer {
     display: block;
     width: 94vw;
@@ -31,10 +35,11 @@
 
 .myGamesContainer p {
     padding: 2vw;
+    font-size: 4vw;
 }
 
 .myGamesContainer button {
-    font-size: 4vw;
+    font-size: 3.5vw;
     padding: 2vw;
     background-color: lightcoral;
     border: 2px solid black;
@@ -112,7 +117,7 @@ p a {
     }
 
     h4 {
-        font-size: 30px;
+        font-size: 25px;
     }
 
     .myGamesContainerContainer {
@@ -123,10 +128,10 @@ p a {
     }
 
     .myGamesContainer img {
-        width: 40px;
-        height: 50px;
-        margin-left: 40px;
-        margin-right: 30px;
+        width: 30px;
+        height: 40px;
+        margin-left: 30px;
+        margin-right: 0px;
     }
 
     .imageDivContainer {
@@ -135,7 +140,7 @@ p a {
     }
 
     .imageDivContainer div:first-child {
-        width: 100px;
+        width: 80px;
         max-width: 100px;
     }
 
@@ -144,7 +149,7 @@ p a {
     }
 
     .myGamesContainer button {
-        font-size: 30px;
+        font-size: 20px;
         padding: 10px 20px;
         margin-right: 30px;
     }
@@ -155,18 +160,19 @@ p a {
     }
 
     .myGamesContainerContainer div h3 {
-        padding: 30px 20px 20px 20px;
+        padding: 30px 20px 20px 0px;
         margin: 0px;
-        font-size: 30px;
+        font-size: 25px;
     }
 
     .outerContainer {
-        width: 1000px;
-        margin: 0px 20px 20px 20px;
+        width: 800px;
+        margin: 0px 0px 20px 0px;
     }
 
     .myGamesContainer div {
         margin: 20px 0px 20px 0px;
+        width: 250px;
     }
 
     .myGamesContainer div:first-of-type:hover {
@@ -187,7 +193,7 @@ p a {
     }
 
     .myGamesContainer p {
-        font-size: 35px;
+        font-size: 25px;
         padding: 5px;
     }
 }
