--- a/src/Styles/ManageLobby.css
+++ b/src/Styles/ManageLobby.css
@@ -114,13 +114,12 @@
 
     .manageLobbyContainerContainer h3 {
         font-size: 25px;
-        margin: 30px 0px 30px 0px;
+        margin: 30px 0px 15px 0px;
     }
 
     .manageLobbyContainerContainerContainer {
         display: flex;
         justify-content: center;
-        margin-top: 110px;
     }
 
     .manageLobbyContainerContainer {
@@ -136,7 +135,7 @@
     .areYouSure p {
         width: 440px;
         font-size: 20px;
-        margin: 30px;
+        margin: 15px 15px 15px 30px;
     }
 
     .areYouSure button {
@@ -201,7 +200,7 @@
     .manageLobbyContainer {
         width: 800px;
         margin-left: 0px;
-        margin-bottom: 30px;
+        margin-bottom: 15px;
     }
 
     .flexLobbyContainer {
@@ -209,7 +208,7 @@
     }
 
     .leftContent {
-        padding: 30px;
+        padding: 15px 15px 15px 30px;
         width: 600px;
         max-width: 600px;
         margin: 0px;
