--- a/src/Styles/Signup.css
+++ b/src/Styles/Signup.css
@@ -83,7 +83,7 @@
      justify-content: center;
      position: absolute;
      width: 1000px;
-     top: 55%;
+     top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
    }
@@ -141,7 +141,8 @@
      width: 500px;
      margin: auto;
      display: flex;
-     align-items: end;
+     align-items: flex-end;
+     transform: translate(0px, -25px);
    }
 
    .logo img {
