--- a/src/Styles/Leaderboards.css
+++ b/src/Styles/Leaderboards.css
@@ -65,11 +65,11 @@
 }
 
 .peopleLbLoaded div:first-child {
-    font-size: 8vw;
+    font-size: 9vw;
 }
 
 .peopleLbLoaded div {
-    font-size: 5vw;
+    font-size: 6vw;
 }
 
 .personLbLoaded {
@@ -79,6 +79,7 @@
 
 .personLbLoaded p:first-child {
     flex: 1;
+    text-align: left;
 }
 
 .personLbLoaded p:nth-child(2) {
@@ -87,7 +88,7 @@
 
 .personLbLoaded p:nth-child(3) {
     flex: 2;
-    text-align: center;
+    text-align: end;
 }
 
 .scoresGoHere {
@@ -107,8 +108,74 @@
         margin-bottom: 15px;
     }
 
+    .lbScoreContainer {
+        margin: 0vw 20px 0px 20px;
+    }
+
     .lbWrapper h3 {
         font-size: 25px;
         margin: 30px 0px 15px 0px;
+    }
+
+    .leftLbButtons button {
+        font-size: 15px;
+        padding: 5px 10px;
+    }
+
+    .leftLbButtons button:hover {
+        cursor: pointer;
+        transform: scale(1.02);
+    }
+
+    .leftLbButtons {
+        margin: 20px 20px 20px 0vw;
+    }
+
+    .rightLbButtons {
+        margin: 20px 0vw 20px 20px;
+    }
+
+    .leftLbButtons button:first-child {
+        margin-right: 10px;
+    }
+
+    .rightLbButtons select {
+        font-size: 15px;
+        padding: 5px 10px;
+    }
+
+    .rightLbButtons select:hover {
+        cursor: pointer;
+    }
+
+    .personLb {
+        margin: 0vw 30px 20px 30px;
+    }
+
+    .personLb div:first-of-type {
+        width: 100px;
+        display: flex;
+        align-items: center;
+    }
+
+    .peopleLbLoaded div:first-child {
+        font-size: 35px;
+        font-weight: bold;
+    }
+
+    .peopleLbLoaded div {
+        font-size: 25px;
+    }
+
+    .personLbLoaded {
+        margin: 0vw 30px 10px 30px;
+    }
+
+    .personLbLoaded p:nth-child(3) {
+        text-align: end;
+    }
+
+    .scoresGoHere {
+        margin-bottom: 20px;
     }
 }
