--- a/src/Styles/CreateGame.css
+++ b/src/Styles/CreateGame.css
@@ -83,6 +83,10 @@
     color: white;
 }
 
+.creatGamehthree {
+    font-size: 4.5vw;
+}
+
 /* For larger than phone screen size (Desktops or iPads) */
 @media only screen and (min-width: 601px) {
     .createGameContainerContainer {
